Set displayTop option to change the length of profile ranking

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
       "target": ["**/*"],
       "minLinesToTrace": 0,
       "dropPathPrefix": "src/",
+      "displayTop": 20
     }]
   ],
   "retainLines": true
