--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "babel-plugin-trace-profiler",
-  "version": "0.0.0",
+  "name": "babel-plugin-time-profiler",
+  "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
-  "private": true,
+  "description": "Babel plugin to profile user code.",
+  "keywords": ["babel", "plugin", "profiler"],
   "devDependencies": {
     "@babel/cli": "^7.10.1"
   },
